plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
    id 'pmd'
}

group = 'org.alxkm'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:all'
}

test {
    useJUnitPlatform()

    // A bug in a concurrency example is far more likely to hang than to fail an assertion. Without a
    // default timeout a deadlock regression would stall CI until the job is killed, with no clue as to
    // which test caused it; with one, the offending test fails by name.
    systemProperty 'junit.jupiter.execution.timeout.default', '60s'
    finalizedBy jacocoTestReport
    
    // Report failures as they happen, with enough detail to diagnose them from a CI log.
    testLogging {
        events 'failed', 'skipped'
        exceptionFormat = 'full'
        showCauses = true
        showExceptions = true
        showStackTraces = true
        showStandardStreams = false

        info {
            events 'started', 'passed', 'failed', 'skipped'
            exceptionFormat = 'full'
        }

        debug {
            events 'started', 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
            exceptionFormat = 'full'
        }
    }

    // A one-line tally once the run finishes. The afterSuite/beforeTest/afterTest closures this
    // replaces are deprecated and go away in Gradle 10; addTestListener is their replacement.
    addTestListener(new TestListener() {
        @Override void beforeSuite(TestDescriptor suite) {}
        @Override void beforeTest(TestDescriptor test) {}
        @Override void afterTest(TestDescriptor test, TestResult result) {}

        @Override
        void afterSuite(TestDescriptor suite, TestResult result) {
            if (suite.parent != null) {
                return // only the root suite carries the totals
            }
            def summary = "Results: ${result.resultType} (${result.testCount} tests, " +
                    "${result.successfulTestCount} successes, ${result.failedTestCount} failures, " +
                    "${result.skippedTestCount} skipped)"
            def rule = '-' * (summary.length() + 6)
            println()
            println(rule)
            println("|  ${summary}  |")
            println(rule)
            if (result.failedTestCount > 0) {
                println()
                println('Failed tests are listed above. Reports: build/reports/tests/test/index.html')
            }
        }
    })
}

// Custom task to print failed test details
task printFailedTests {
    doLast {
        def testResultsDir = layout.buildDirectory.dir('test-results/test').get().asFile
        if (testResultsDir.exists()) {
            testResultsDir.listFiles().findAll { it.name.endsWith('.xml') }.each { file ->
                def xml = new groovy.xml.XmlSlurper().parse(file)
                xml.testcase.each { testcase ->
                    if (testcase.failure.size() > 0) {
                        println("\n💥 FAILED TEST: ${testcase.@classname}.${testcase.@name}")
                        println("   Time: ${testcase.@time}s")
                        testcase.failure.each { failure ->
                            println("   Type: ${failure.@type}")
                            println("   Message: ${failure.@message}")
                            if (failure.text()) {
                                println("   Details:")
                                failure.text().split('\n').take(10).each { line ->
                                    println("     ${line}")
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}

// JaCoCo Configuration - NON-BREAKING
jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

// Checkstyle Configuration - NON-BREAKING
checkstyle {
    toolVersion = '10.12.7'
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    ignoreFailures = true  // 🛡️ WON'T BREAK BUILD
}

// Fix Guava dependency conflict
configurations.checkstyle {
    resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
        select("com.google.guava:guava:23.0")
    }
}

// PMD Configuration - NON-BREAKING  
pmd {
    consoleOutput = true
    toolVersion = '7.0.0'
    ignoreFailures = true  // 🛡️ WON'T BREAK BUILD
    ruleSets = [
        'category/java/errorprone.xml',
        'category/java/bestpractices.xml',
        'category/java/multithreading.xml'
    ]
}
